--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /devildrey33.github.io/nbproject/private/
+/devildrey33.github.io/ObjetoCanvas/
+/devildrey33.github.io/ObjetoAnimacion/
+/devildrey33.github.io/ObjetoTest/
+/devildrey33.github.io/Sinusoidal/
+/devildrey33.github.io/HexTunnel/
