--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /devildrey33.github.io/ObjetoTest/
 /devildrey33.github.io/Sinusoidal/
 /devildrey33.github.io/HexTunnel/
+/devildrey33.github.io/EspectroAudible/
+/devildrey33.github.io/CyberParasit/
+/devildrey33.github.io/EsferaVertexShader/
+/devildrey33.github.io/AdiestramientoCubos/
