--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /devildrey33.github.io/CyberParasit/
 /devildrey33.github.io/EsferaVertexShader/
 /devildrey33.github.io/AdiestramientoCubos/
+/devildrey33.github.io/WormHole/
+/devildrey33.github.io/MultiCubo/
